--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,30 @@
-html, body {
-padding: 15px;
+
+html {
+  height: 100%;
+  margin: auto;
+}
+
+body {
+    margin-top: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 350px;
+    text-align: center;
+    padding: 20px;
+    padding-bottom: 50px;
+    border: 2px solid black;
+}
+
+#scan-button{
+  min-width: 100px;
+}
+
+#connect-button{
+  min-width: 100px;
+}
+
+#password{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
