--- a/src/style.css
+++ b/src/style.css
@@ -72,18 +72,18 @@ input:disabled {
 }
 
 input[type='radio']{
-  display: inline-block;
+  position: relative;
+  bottom: -0.33em;
   margin:0;
   border:0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  height: 1em;
-  width: 20%;
+  height: 1.5em;
+  width: 15%;
 }
 
 label {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 5%;
   display: inline-block;
   width: 80%;
   text-align: left;
